sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/Loan_Application_Form__c.object-meta.xml
<CustomObject>
    <description>Used to process loans for Credit team</description>
    <label>Loan Application Form</label>
    <nameField>
        <label>Loan Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>