sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Applicant_Non_business_Income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Non_business_Income__c</fullName>
    <label>Applicant Non-business Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>