sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Applicants_Income_flow__c.field-meta.xml
<CustomField>
    <fullName>Applicants_Income_flow__c</fullName>
    <label>Applicants Income flow:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Irregular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>