sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>