sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Business_Being_Financed_Income__c.field-meta.xml
<CustomField>
    <fullName>Business_Being_Financed_Income__c</fullName>
    <label>Business Being Financed Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>