sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Business_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Physical_Address__c</fullName>
    <label>Business Physical Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>