sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Business_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Business_Strengths__c</fullName>
    <label>Business Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>