sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Business_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Business_Telephone__c</fullName>
    <label>Business Telephone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>