sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Business_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Business_Weaknesses__c</fullName>
    <label>Business Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>