sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Credit_Officer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Officer__c</fullName>
    <label>Credit Officer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>