sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Duration_at_business_premises__c.field-meta.xml
<CustomField>
    <fullName>Duration_at_business_premises__c</fullName>
    <label>Duration at business premises</label>
    <length>30</length>
    <type>Text</type>
</CustomField>