sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Duration_at_Residence__c.field-meta.xml
<CustomField>
    <fullName>Duration_at_Residence__c</fullName>
    <label>Duration at Residence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>