sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Duration_Operating_business_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Duration_Operating_business_Yrs__c</fullName>
    <label>Duration Operating business (Yrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>