sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Housing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Housing_Expense__c</fullName>
    <label>Housing Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>