sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/How_Often_Applicant_Buys__c.field-meta.xml
<CustomField>
    <fullName>How_Often_Applicant_Buys__c</fullName>
    <label>How Often Applicant Buys</label>
    <type>TextArea</type>
</CustomField>