sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/How_Often_applicant_sells__c.field-meta.xml
<CustomField>
    <fullName>How_Often_applicant_sells__c</fullName>
    <label>How Often applicant sells</label>
    <type>TextArea</type>
</CustomField>