sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/If_paid__c.field-meta.xml
<CustomField>
    <fullName>If_paid__c</fullName>
    <label>If paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>