sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/If_sales_will_be_affected_by_loan__c.field-meta.xml
<CustomField>
    <fullName>If_sales_will_be_affected_by_loan__c</fullName>
    <label>If sales will be affected by loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>