sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Is_business_Registered__c.field-meta.xml
<CustomField>
    <fullName>Is_business_Registered__c</fullName>
    <label>Is business Registered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>