sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Loan_Profile__c.field-meta.xml
<CustomField>
    <fullName>Loan_Profile__c</fullName>
    <label>Loan Profile</label>
    <referenceTo>Loan_Profile__c</referenceTo>
    <relationshipLabel>Loan Application Forms</relationshipLabel>
    <relationshipName>Loan_Application_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>