sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>