sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Major_business_Markets__c.field-meta.xml
<CustomField>
    <fullName>Major_business_Markets__c</fullName>
    <label>Major business Markets</label>
    <type>TextArea</type>
</CustomField>