sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Major_Business_suppliers__c.field-meta.xml
<CustomField>
    <fullName>Major_Business_suppliers__c</fullName>
    <label>Major Business suppliers</label>
    <type>TextArea</type>
</CustomField>