sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Name_of_business__c.field-meta.xml
<CustomField>
    <fullName>Name_of_business__c</fullName>
    <label>Name of business</label>
    <length>30</length>
    <type>Text</type>
</CustomField>