sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/National_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>National_ID_Number__c</fullName>
    <label>National ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>