sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Nature_Of_business__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_business__c</fullName>
    <label>Nature Of business</label>
    <type>TextArea</type>
</CustomField>