sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Next_of_Kin_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin_ID_Number__c</fullName>
    <label>Next of Kin ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>