sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Next_of_Kin_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin_Name__c</fullName>
    <label>Next of Kin Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>