sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Next_of_Kin_Phone__c.field-meta.xml
<CustomField>
    <fullName>Next_of_Kin_Phone__c</fullName>
    <label>Next of Kin Phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>