sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Number_Of_employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_employees__c</fullName>
    <label>Number  Of employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>