sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Number_of_Relatives__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Relatives__c</fullName>
    <label>Number of Relatives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>