sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Other_Family_business_income__c.field-meta.xml
<CustomField>
    <fullName>Other_Family_business_income__c</fullName>
    <label>Other Family business income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>