sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Income__c</fullName>
    <label>Other Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>