sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Pension_s_Income__c.field-meta.xml
<CustomField>
    <fullName>Pension_s_Income__c</fullName>
    <label>Pension&#39;s Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>