sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Personal_Loan_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loan_Repayments__c</fullName>
    <label>Personal Loan Repayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>