sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Previous_Residence_Location__c.field-meta.xml
<CustomField>
    <fullName>Previous_Residence_Location__c</fullName>
    <label>Previous Residence (Location)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>