sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>