sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Rented_Owned__c.field-meta.xml
<CustomField>
    <fullName>Rented_Owned__c</fullName>
    <label>Rented/Owned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>