sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Residense_Physical_Address_Tel_Box_No__c.field-meta.xml
<CustomField>
    <fullName>Residense_Physical_Address_Tel_Box_No__c</fullName>
    <label>Residense/Physical Address/Tel/Box No.</label>
    <type>TextArea</type>
</CustomField>