sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/School_Fees_Expense__c.field-meta.xml
<CustomField>
    <fullName>School_Fees_Expense__c</fullName>
    <label>School Fees Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>