sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Spouse_Non_Business_Income__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Non_Business_Income__c</fullName>
    <label>Spouse Non-Business Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>