sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <label>Surname</label>
    <length>30</length>
    <type>Text</type>
</CustomField>