sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>Food_Expense__c  +  Housing_Expense__c  +  Other_Expenses__c  +  Personal_Loan_Repayments__c  +  School_Fees_Expense__c  +  Services_Expense__c  +  Services_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>