sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <formula>Applicant_Non_business_Income__c  +  Business_Being_Financed_Income__c  +  Other_Family_business_income__c  +  Other_Income__c  +  Spouse_Non_Business_Income__c +  Pension_s_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>