sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Transportation_Vehicle_Expense__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Vehicle_Expense__c</fullName>
    <label>Transportation/Vehicle Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>