sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KIVA Loan</fullName>
            </value>
            <value>
                <fullName>FLI Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>