sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Where_Applicant_buys__c.field-meta.xml
<CustomField>
    <fullName>Where_Applicant_buys__c</fullName>
    <label>Where Applicant buys</label>
    <type>TextArea</type>
</CustomField>