sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/fields/Where_Applicant_sells__c.field-meta.xml
<CustomField>
    <fullName>Where_Applicant_sells__c</fullName>
    <label>Where Applicant sells</label>
    <type>TextArea</type>
</CustomField>