sfSandBoxCode/force-app/main/default/objects/Loan_Application_Form__c/recordTypes/Loan_Application_Form.recordType-meta.xml
<RecordType>
    <fullName>Loan_Application_Form</fullName>
    <active>true</active>
    <label>Loan Application Form</label>
</RecordType>